--- a/linear_models.Rmd
+++ b/linear_models.Rmd
@@ -6,11 +6,168 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-
 library(tidyverse)
 library(p8105.datasets)
 
 set.seed(1)
+
+knitr::opts_chunk$set(
+	echo = TRUE,
+	warning = FALSE,
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+```
+
+
+Load NYC Airbnb data.
+
+```{r}
+data("nyc_airbnb")
+
+nyc_airbnb = 
+  nyc_airbnb %>% 
+  mutate(stars = review_scores_location / 2) %>% 
+  rename(
+    borough = neighbourhood_group,
+    neighborhood = neighbourhood) %>% 
+  filter(borough != "Staten Island") %>% 
+  select(price, stars, borough, neighborhood, room_type)
+```
+
+## Fit the first model
+
+```{r}
+fit = lm(price ~ stars + borough, data = nyc_airbnb)
+
+fit
+
+summary(fit)
+
+fit %>% 
+  broom::tidy() %>% 
+  mutate(
+    term = str_replace(term, "borough", "Borough: ")
+  ) %>% 
+  select(term, estimate, p.value) %>% 
+  knitr::kable(digits = 2)
+```
+
+
+Let's change reference category.
+
+```{r}
+fit = 
+  nyc_airbnb %>% 
+  mutate(
+    borough = fct_infreq(borough) #most common is category 1->reference group(default:alphabetically)
+  ) %>% 
+  lm(price ~ stars + borough, data = .)
+
+fit %>% 
+  broom::tidy() %>% 
+  mutate(
+    term = str_replace(term, "borough", "Borough: ")
+  ) %>% 
+  select(term, estimate, p.value) %>% 
+  knitr::kable(digits = 2)
+
+fit %>% 
+  broom::glance() %>% 
+  select(AIC)
+```
+
+
+## Diagnostics
+
+```{r}
+modelr::add_residuals(nyc_airbnb, fit) %>% 
+  ggplot(aes(x = stars, y = resid)) +
+  geom_point()
+
+## constant variance does not work here. If non-constant variance looks like this, you should be concerned.
+
+nyc_airbnb %>% 
+  modelr::add_residuals(fit) %>% 
+  ggplot(aes(x = borough, y = resid)) +
+  geom_violin() +
+  ylim(-250, 250)
+```
+
+
+## Hypothesis testing
+
+one coefficient (let's say `stars`).
+
+```{r}
+fit %>% 
+  broom::tidy()
+
+fit_null = lm(price ~ stars, data = nyc_airbnb)
+fit_alt = lm(price ~ stars + borough, data = nyc_airbnb)
+
+anova(fit_null, fit_alt) %>% 
+  broom::tidy()
+```
+
+
+## Room type by borough
+
+Interactions...?
+
+```{r}
+fit = 
+  nyc_airbnb %>% 
+  lm(price ~ stars + borough * room_type, data = .)
+
+fit %>% 
+  broom::tidy()
+```
+
+
+So...can we fit models by borough...?
+
+```{r}
+#nyc_airbnb %>% 
+#  nest(df = -borough) %>% 
+#  mutate(
+#    models = map(df, ~lm(price ~ stars + room_type, df = .x)),
+#    results = map(models, broom::tidy)
+#  ) %>%
+#    select(borough, results) %>%
+#    unnest(results)
+```
+
+```{r}
+nest_lm_res =
+  nyc_airbnb %>% 
+  nest(data = -borough) %>% 
+  mutate(
+    models = map(data, ~lm(price ~ stars + room_type, data = .x)),
+    results = map(models, broom::tidy)) %>% 
+  select(-data, -models) %>% 
+  unnest(results)
+```
+
+
+Quick double check...?
+
+```{r}
+nyc_airbnb %>% 
+  
+  filter(borough == "Brooklyn") %>% 
+  lm(price ~stars + room_type, data = . ) %>% 
+  broom::tidy()
 ```
 
